<?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
     android:layout_width="fill_parent" 
     android:layout_height="fill_parent"> 

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
 	    
 	    <LinearLayout
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:orientation="horizontal" >

			<com.dwreload.variables.VerticalTextView
			    android:id="@+id/verticalTextView1"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical"
			    android:text="@string/settings_Mail"
			    android:textSize="18sp" />
     
 	    	<LinearLayout
 	    	    android:layout_width="fill_parent"
 	    	    android:layout_height="wrap_content"
 	    	    android:orientation="vertical" >

		    <CheckBox
		        android:id="@+id/smstomail"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/settings_sms_to" />

		    <CheckBox
		        android:id="@+id/callstomail"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/settings_calls_to" />

	    	<CheckBox
	    	    android:id="@+id/GPStoMail"
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
	    	    android:text="@string/settings_gps_to" />

	    	<CheckBox
	    	    android:id="@+id/HistoryToMail"
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
	    	    android:text="@string/settings_history_to" />

	    	<CheckBox
	    	    android:id="@+id/CB_Social"
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
	    	    android:text="@string/social_to" />

		    <CheckBox
		        android:id="@+id/AllOtherToMail"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/settings_other_to" />

	    	<CheckBox
	    	    android:id="@+id/FilesToMail"
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
	    	    android:text="@string/files" />

	    </LinearLayout>
	</LinearLayout>
	    
	    <TextView
	        android:id="@+id/copyrghts"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/email_addr" />

	    <EditText
	        android:id="@+id/emailaddr"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="text|textEmailAddress" >

	        <requestFocus />
	    </EditText>

	    <TextView
	        android:id="@+id/textView8"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/email_usr_pass" />

	    <EditText
	        android:id="@+id/mailuserpass"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:hint="@string/email_usr_pass"
	        android:inputType="text|textPassword" />

	    <TextView
	        android:id="@+id/textView5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/popserver" />

	    <EditText
	        android:id="@+id/popserveraddr"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:inputType="text|textWebEditText" />
	    
	    <Button
	        android:id="@+id/testmailbutton"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/test" />
	
	</LinearLayout>
 </ScrollView>